--- a/assets/mediascreen.css
+++ b/assets/mediascreen.css
@@ -547,6 +547,8 @@ hr{
         padding: 1rem;
         margin-top: 50px;
         gap: 1rem;
+        align-items: center;
+        justify-content: center;
     }
     .Skills > .general{
         display: flex;
@@ -574,11 +576,14 @@ hr{
     .Skills  .sólido{
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
         gap: 1rem;
-        width: 250px;
+        
         
     }
+
+   
     
     
     
@@ -586,8 +591,8 @@ hr{
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        align-items: flex-start;
-        width: 250px;
+        align-items: center;
+        
     
     
     }
@@ -893,9 +898,9 @@ hr{
     .Skills  .sólido{
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         gap: 1rem;
-        width: 250px;
+       
         
     }
     
@@ -906,9 +911,17 @@ hr{
         flex-direction: column;
         gap: 1rem;
         align-items: flex-start;
-        width: 250px;
+        
     
     
+    }
+
+    .Skills > .general > .sólido > .first-solid, .second-solid, .third-solid{
+        display: flex;
+        flex-direction: column;
+        
+        align-items: center;
+        justify-content: center;
     }
     
     .projetos {
